--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,20 +8,20 @@
     android:layout_height="match_parent"
     android:padding="0dp"
     tools:context=".activities.MainActivity">
-    <FrameLayout
+     <FrameLayout
         android:id="@+id/contedor_fragments"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffffff"/>
+        android:background="@color/colorWhite"/>
         <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_drawer"
-        app:headerLayout="@layout/header"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="#ffffff"
         app:itemTextColor="#000000"
         app:itemIconTint="#000000"
         android:layout_gravity="start"
+        app:headerLayout="@layout/header"
         app:menu="@menu/drawermenu">
     </com.google.android.material.navigation.NavigationView>
 </androidx.drawerlayout.widget.DrawerLayout>
